--- a/index.html
+++ b/index.html
@@ -1,208 +1,209 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>TinDog</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
-      crossorigin="anonymous"
-    />
 
-    <!--* Google Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;900&family=Ubuntu&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/styles.css" />
+<head>
+  <meta charset="utf-8" />
+  <title>TinDog</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
 
-    <!--* Font Awesome -->
-    <script
-      src="https://kit.fontawesome.com/3c2af0c8a3.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
+  <!--* Google Fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;900&family=Ubuntu&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="css/styles.css" />
 
-  <body>
-    <section id="title">
-      <div class="container-fluid">
-        <!-- Nav Bar -->
+  <!--* Font Awesome -->
+  <script src="https://kit.fontawesome.com/3c2af0c8a3.js" crossorigin="anonymous"></script>
+</head>
 
-        <nav class="navbar navbar-expand-lg navbar-dark">
-          <a class="navbar-brand" href="#">tindog</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
-                  >Contact</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Download</a>
-              </li>
-              <!-- <li class="nav-item dropdown">
-                  <a
-                    class="nav-link dropdown-toggle"
-                    href="#"
-                    id="navbarDropdownMenuLink"
-                    role="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-                  >
-                    Dropdown link
-                  </a>
-                  <ul
-                    class="dropdown-menu"
-                    aria-labelledby="navbarDropdownMenuLink"
-                  >
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li>
-                      <a class="dropdown-item" href="#">Another action</a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Something else here</a>
-                    </li>
-                  </ul>
-                </li> -->
-            </ul>
-          </div>
-        </nav>
+<body>
+  <section id="title" class="colored-section">
+    <div class="container-fluid">
+      <!-- Nav Bar -->
 
-        <!-- Title -->
-
-        <div class="row">
-          <div class="col-lg">
-            <h1>Meet new and interesting dogs nearby.</h1>
-            <button type="button" class="btn btn-dark btn-lg download-btn">
-              <i class="fab fa-apple"></i> Download
-            </button>
-            <button
-              type="button"
-              class="btn btn-outline-light btn-lg download-btn"
-            >
-              <i class="fab fa-google-play"></i> Download
-            </button>
-          </div>
-          <div class="col-lg">
-            <img
-              class="title-img"
-              src="images/iphone6.png"
-              alt="phone-mockup"
-            />
-          </div>
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="#">tindog</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#footer">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#pricing">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#cta">Download</a>
+            </li>
+          </ul>
         </div>
-      </div>
-    </section>
+      </nav>
 
-    <!-- Features -->
+      <!-- Title -->
 
-    <section id="features">
       <div class="row">
-        <div class="features-box col-lg-4">
-          <i class="features-icon fas fa-check-circle fa-4x"></i>
-          <h3>Easy to use.</h3>
-          <p>So easy to use, even your dog could do it.</p>
+        <div class="col-lg">
+          <h1 class="title-text">Meet new and interesting dogs nearby.</h1>
+          <button type="button" class="btn btn-dark btn-lg download-btn">
+            <i class="fab fa-apple"></i> Download
+          </button>
+          <button type="button" class="btn btn-outline-light btn-lg download-btn">
+            <i class="fab fa-google-play"></i> Download
+          </button>
         </div>
-        <div class="features-box col-lg-4">
-          <i class="features-icon fas fa-bullseye fa-4x"></i>
-          <h3>Elite Clientele.</h3>
-          <p>We have all the dogs, the greatest dogs.</p>
-        </div>
-        <div class="features-box col-lg-4">
-          <i class="features-icon fas fa-heart fa-4x"></i>
-          <h3>Guaranteed to work.</h3>
-          <p>Find the love of your dog's life or your money back.</p>
+        <div class="col-lg">
+          <img class="title-img" src="images/iphone6.png" alt="phone-mockup" />
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- Testimonials -->
+  <!-- Features -->
 
-    <section id="testimonials">
-      <h2>
-        I no longer have to sniff other dogs for love. I've found the hottest
-        Corgi on TinDog. Woof.
-      </h2>
-      <img src="images/dog-img.jpg" alt="dog-profile" />
-      <em>Pebbles, New York</em>
+  <section id="features" class="colored-section">
+    <div class="row">
+      <div class="features-box col-lg-4">
+        <i class="features-icon fas fa-check-circle fa-4x"></i>
+        <h3 class="feature-text">Easy to use.</h3>
+        <p>So easy to use, even your dog could do it.</p>
+      </div>
+      <div class="features-box col-lg-4">
+        <i class="features-icon fas fa-bullseye fa-4x"></i>
+        <h3 class="feature-text">Elite Clientele.</h3>
+        <p>We have all the dogs, the greatest dogs.</p>
+      </div>
+      <div class="features-box col-lg-4">
+        <i class="features-icon fas fa-heart fa-4x"></i>
+        <h3 class="feature-text">Guaranteed to work.</h3>
+        <p>Find the love of your dog's life or your money back.</p>
+      </div>
+    </div>
+  </section>
 
-      <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
-    </section>
+  <!-- Testimonials -->
 
-    <!-- Press -->
+  <section id="testimonials" class="colored-section">
 
-    <section id="press">
-      <img src="images/techcrunch.png" alt="tc-logo" />
-      <img src="images/tnw.png" alt="tnw-logo" />
-      <img src="images/bizinsider.png" alt="biz-insider-logo" />
-      <img src="images/mashable.png" alt="mashable-logo" />
-    </section>
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <h2 class="testimonial-text">
+            I no longer have to sniff other dogs for love. I've found the hottest
+            Corgi on TinDog. Woof.
+          </h2>
+          <img class="testimonial-img" src="images/dog-img.jpg" alt="dog-profile" />
+          <em>Pebbles, New York</em>
+        </div>
+        <div class="carousel-item">
+          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of
+            their life. I think.</h2>
+          <img class="testimonial-img" src="images/lady-img.jpg" alt="lady-profile">
+          <em>Beverly, Illinois</em>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </section>
 
-    <!-- Pricing -->
+  <!-- Press -->
 
-    <section id="pricing">
-      <h2>A Plan for Every Dog's Needs</h2>
-      <p>Simple and affordable price plans for your and your dog.</p>
+  <section id="press" class="colored-section">
+    <img class="press-img" src="images/techcrunch.png" alt="tc-logo" />
+    <img class="press-img" src="images/tnw.png" alt="tnw-logo" />
+    <img class="press-img" src="images/bizinsider.png" alt="biz-insider-logo" />
+    <img class="press-img" src="images/mashable.png" alt="mashable-logo" />
+  </section>
 
-      <h3>Chihuahua</h3>
-      <h2>Free</h2>
-      <p>5 Matches Per Day</p>
-      <p>10 Messages Per Day</p>
-      <p>Unlimited App Usage</p>
-      <button type="button">Sign Up</button>
+  <!-- Pricing -->
 
-      <h3>Labrador</h3>
-      <h2>$49 / mo</h2>
-      <p>Unlimited Matches</p>
-      <p>Unlimited Messages</p>
-      <p>Unlimited App Usage</p>
-      <button type="button">Sign Up</button>
+  <section id="pricing">
+    <h2 class="pricing-text pricing-text-bold" >A Plan for Every Dog's Needs</h2>
+    <p>Simple and affordable price plans for your and your dog.</p>
 
-      <h3>Mastiff</h3>
-      <h2>$99 / mo</h2>
-      <p>Pirority Listing</p>
-      <p>Unlimited Matches</p>
-      <p>Unlimited Messages</p>
-      <p>Unlimited App Usage</p>
-      <button type="button">Sign Up</button>
-    </section>
+    <div class="row">
+      <div class="pricing-column col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3 class="dog-breed-text">Chihuahua</h3>
+          </div>
+          <div class="card-body">
+            <h2 class="pricing-text" >Free</h2>
+            <p>5 Matches Per Day</p>
+            <p>10 Messages Per Day</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-lg w-100 btn-outline-success" type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
 
-    <!-- Call to Action -->
+      <div class="pricing-column col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3 class="dog-breed-text">Labrador</h3>
+          </div>
+          <div class="card-body">
+            <h2 class="pricing-text" >$49 / mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-lg w-100 btn-success" type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
 
-    <section id="cta">
-      <h3>Find the True Love of Your Dog's Life Today.</h3>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
-    </section>
+      <div class="pricing-column col-lg-4">
+        <div class="card">
+          <div class="card-header">
+            <h3 class="dog-breed-text">Mastiff</h3>
+          </div>
+          <div class="card-body">
+            <h2 class="pricing-text" >$99 / mo</h2>
+            <p>Pirority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-lg w-100 btn-success" type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
+      </div>
+  </section>
 
-    <!-- Footer -->
+  <!-- Call to Action -->
 
-    <footer id="footer">
-      <p>© Copyright 2018 TinDog</p>
-    </footer>
+  <section id="cta" class="colored-section">
+    <h3 class="cta-text">Find the True Love of Your Dog's Life Today.</h3>
+    <button class="btn btn-lg btn-dark download-btn" type="button"><i class="fab fa-apple"></i> Download</button>
+    <button class="btn btn-lg btn-outline-light download-btn" type="button"><i class="fab fa-google-play"></i> Download</button>
+  </section>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <!-- Footer -->
+
+  <footer id="footer">
+    <div class="foot-icon d-flex justify-content-center">
+      <a class="mx-2 py-2" href="#"><i class="fab fa-twitter"></i></a>
+      <a class="mx-2 py-2" href="#"><i class="fab fa-facebook-f"></i></a>
+      <a class="mx-2 py-2" href="#"><i class="fab fa-instagram"></i></a>
+      <a class="mx-2 py-2" href="#"><i class="fas fa-envelope"></i></a>
+    </div>
+    <p class="mb-2">© Copyright 2018 TinDog</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
