--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   <!-- Press -->
 
   <section id="press" class="colored-section">
-    <img class="press-img" src="images/techcrunch.png" alt="tc-logo" />
+    <img class="press-img" src="images/TechCrunch.png" alt="tc-logo" />
     <img class="press-img" src="images/tnw.png" alt="tnw-logo" />
     <img class="press-img" src="images/bizinsider.png" alt="biz-insider-logo" />
     <img class="press-img" src="images/mashable.png" alt="mashable-logo" />
