--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
 
   <!-- Footer -->
 
-  <footer id="footer">
-    <div class="foot-icon d-flex justify-content-center">
+  <footer id="footer" class=" d-flex flex-column align-items-center ">
+    <div class=" foot-icon">
       <a class="mx-2 py-2" href="#"><i class="fab fa-twitter"></i></a>
       <a class="mx-2 py-2" href="#"><i class="fab fa-facebook-f"></i></a>
       <a class="mx-2 py-2" href="#"><i class="fab fa-instagram"></i></a>
